# wecom-gpt

./: Cargo.toml  README.md  build.rs  diesel.toml
.github/workflows/: deploy.yml
migrations/2024-03-05-053359_init_user/: down.sql  up.sql
migrations/2024-03-05-055846_init_provider/: down.sql  up.sql
migrations/2024-03-05-061828_init_assistant/: down.sql  up.sql
migrations/2024-03-05-062310_init_conversation/: down.sql  up.sql
migrations/2024-03-05-062731_init_msg_type/: down.sql  up.sql
migrations/2024-03-05-062953_init_content_type/: down.sql  up.sql
migrations/2024-03-05-063052_init_message/: up.sql
migrations/2024-03-06-030239_initial_setup/: down.sql  up.sql
src/: accountant.rs  assistant.rs  build.rs  core.rs  crypto.rs  lib.rs  main.rs  openai.rs  reception.rs  wecom_api.rs
src/provider/: openai.rs
src/reception/: agent.rs  core.rs  database.rs  guest.rs
src/reception/database/: agent.rs  model.rs  models.rs  schema.rs
src/reception/providers/: openai.rs
src/storage/: agent.rs  mod.rs  model.rs  schema.rs
