[package]
name = "wecom-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
axum = "0.7.4"
base16ct = { version = "0.2.0", features = ["alloc"] }
base64 = "0.21.7"
cbc = { version = "0.1.2", features = ["alloc"] }
envy = "0.4.2"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde-xml-rs = "0.6.0"
sha1 = "0.10.6"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wecom-agent = "0.1.5"
wecom-crypto = "0.1.5"
