[package]
name = "wecom-gpt"
version = "0.2.1"
edition = "2021"

[dependencies]
axum = "0.7.4"
chrono = "0.4.34"
diesel = { version = "2.1.4", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
    "chrono",
] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
r2d2 = "0.8.10"
rand = "0.8.5"
reqwest = "0.11.26"
serde = { version = "1.0.195", features = ["derive"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
wecom-agent = "0.1.14"
wecom-crypto = "0.1.7"
